--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,7 +3,6 @@
 {% set bundle = "tar.gz" %}
 {% set hash_type = "sha256" %}
 {% set hash = "23b10eb0d65afe042fad16eabdf5956bdc863e110c5cf3fa1b4bc59f3a7f37a5" %}
-{% set build = 0 %}
 
 package:
   name: {{ name|lower }}
@@ -15,14 +14,14 @@ source:
   {{ hash_type }}: {{ hash }}
 
 build:
-  number: 0
-  script: python setup.py install --single-version-externally-managed --record=record.txt
   noarch: python
+  number: 0
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
     - python
-    - setuptools
+    - pip
     - setuptools_scm >=1.15.0
 
   run:
