--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,25 +1,21 @@
 {% set name = "jaraco.logging" %}
-{% set version = "2.0" %}
-{% set bundle = "tar.gz" %}
-{% set hash_type = "sha256" %}
-{% set hash = "8f7dbf01b75e4d9bac479312b66a94c80d0a6d28db453f397e30687ca42168d1" %}
+{% set version = "3.1.0" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.{{ bundle }}
-  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ bundle }}
-  {{ hash_type }}: {{ hash }}
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: 150dc8701207b28bc65a16f0e91c07250a8d1b9da324ce674c0e375774944f13
 
 build:
   noarch: python
-  number: 1
-  script: python -m pip install --no-deps --ignore-installed .
+  number: 0
+  script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
-  build:
+  host:
     - python >=3.6
     - pip
     - setuptools_scm >=1.15.0
@@ -33,6 +29,10 @@ requirements:
 test:
   imports:
     - jaraco
+  commands:
+    - pip check
+  requires: 
+    - pip
 
 about:
   home: https://github.com/jaraco/jaraco.logging
